# tokodon

./: .clang-tidy  .contextProperties.ini.license  .craft.ini  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  REUSE.toml  config.h.in  org.kde.tokodon.appdata.xml  org.kde.tokodon.desktop  snapcraft.yaml
src/: CMakeLists.txt  Messages.sh  about.cpp  about.h  abstractaccount.cpp  abstractaccount.h  abstracttimelinemodel.cpp  abstracttimelinemodel.h  account.cpp  account.h  accountconfig.kcfg  accountconfig.kcfgc  accountmanager.cpp  accountmanager.h  accountmodel.cpp  accountmodel.h  androidresources.qrc  attachmenteditormodel.cpp  attachmenteditormodel.h  blurhash.h  blurhashimageprovider.cpp  clipboard.cpp  colorschemer.cpp  colorschemer.h  config.kcfg  config.kcfgc  conversationmodel.cpp  conversationmodel.h  desktopresources.qrc  filehelper.cpp  filehelper.h  filetransferjob.cpp  filetransferjob.h  followrequestmodel.cpp  followrequestmodel.h  icon-list.txt  icon-list.txt.license  identity.cpp  identity.h  languagemodel.cpp  (+59 more)
src/account/: abstractaccount.cpp  abstractaccount.h  account.cpp  account.h  accountmanager.cpp  accountmanager.h  announcementmodel.cpp  announcementmodel.h  annualreport.cpp  annualreport.h  blockeddomainmodel.cpp  blockeddomainmodel.h  collectionmodel.cpp  collectionmodel.h  collectionsmodel.cpp  collectionsmodel.h  favoritelistsmodel.cpp  favoritelistsmodel.h  featuredtagsmodel.cpp  featuredtagsmodel.h  filtersmodel.cpp  filtersmodel.h  identity.cpp  identity.h  listsmodel.cpp  listsmodel.h  notificationfilteringpolicy.cpp  notificationfilteringpolicy.h  notificationhandler.cpp  notificationhandler.h  poststatisticsmodel.cpp  poststatisticsmodel.h  preferences.cpp  preferences.h  privacypolicy.cpp  privacypolicy.h  profileeditor.cpp  profileeditor.h  publicserversmodel.cpp  publicserversmodel.h  (+12 more)
src/actioncollection/: KQuickCommandBarPage.qml  KeySequenceItem.qml  ShortcutsEditor.qml  actioncollection.cpp  actioncollection.h  actiondata.cpp  actiondata.h  actionmodel.cpp  actionmodel.h  keysequencehelper.cpp  keysequencehelper.h
src/admin/: accounttoolmodel.cpp  accounttoolmodel.h  adminaccountinfo.cpp  adminaccountinfo.h  emailblocktoolmodel.cpp  emailblocktoolmodel.h  emailinfo.cpp  emailinfo.h  federationinfo.cpp  federationinfo.h  federationtoolmodel.cpp  federationtoolmodel.h  ipinfo.cpp  ipinfo.h  iprulestoolmodel.cpp  iprulestoolmodel.h  reportinfo.cpp  reportinfo.h  reporttoolmodel.cpp  reporttoolmodel.h
src/autotests/: CMakeLists.txt  accounttest.cpp  announcementstest.cpp  blurhashtest.cpp  contentparsertest.cpp  conversationmodeltest.cpp  customemojitest.cpp  emailblocktooltest.cpp  federationtooltest.cpp  helperreply.h  iprulestooltest.cpp  listsmodeltest.cpp  mockaccount.cpp  mockaccount.h  polltimemodeltest.cpp  posteditortest.cpp  posttest.cpp  profileeditortest.cpp  rulesmodeltest.cpp  searchtest.cpp  socialgraphmodeltest.cpp  texthandlertest.cpp  timelinetest.cpp
src/autotests/appiumtests/: CMakeLists.txt  SearchboxTest.py  TimelineTest.py
src/autotests/data/: announcements.json  annual_report.json  api_v1_instance.json  api_v2_instance.json  context.json  email-info.json  (+31 more)
src/conversation/: conversationmodel.cpp  conversationmodel.h
src/datatypes/: application.cpp  application.h  attachment.cpp  attachment.h  card.cpp  card.h  datatype.h  datatype_p.h  poll.cpp  poll.h  post.cpp  post.h  tag.cpp  tag.h
src/editor/: attachmenteditormodel.cpp  attachmenteditormodel.h  collectioneditorbackend.cpp  collectioneditorbackend.h  filtereditorbackend.cpp  filtereditorbackend.h  languagemodel.cpp  languagemodel.h  listeditorbackend.cpp  listeditorbackend.h  polleditorbackend.cpp  polleditorbackend.h  polltimemodel.cpp  polltimemodel.h  posteditorbackend.cpp  posteditorbackend.h  reporteditorbackend.cpp  reporteditorbackend.h
src/network/: networkaccessmanagerfactory.cpp  networkaccessmanagerfactory.h  networkcontroller.cpp  networkcontroller.h  networkrequestprogress.cpp  networkrequestprogress.h
src/notification/: notificationgroupingmodel.cpp  notificationgroupingmodel.h  notificationmodel.cpp  notificationmodel.h
src/purpose/: CMakeLists.txt  purposeplugin.cpp  purposeplugin.json
src/qml/: AccountHeader.qml  AccountInfo.qml  AnnouncementsPage.qml  CollectionPage.qml  CollectionsPage.qml  ConversationDelegate.qml  ConversationPage.qml  EditCollectionPage.qml  EditListPage.qml  ExplorePage.qml  FullScreenImage.qml  LanguageSelector.qml  ListTimelinePage.qml  Main.qml  MastoPage.qml  NotificationPage.qml  ReadMarker.qml  SearchView.qml  ServerInformationPage.qml  ShareAction.qml  TimelinePage.qml  UserInfo.qml
src/search/: searchmodel.cpp  searchmodel.h
src/timeline/: abstractlistmodel.cpp  abstractlistmodel.h  abstracttimelinemodel.cpp  abstracttimelinemodel.h  accountmediatimelinemodel.cpp  accountmediatimelinemodel.h  accountmodel.cpp  accountmodel.h  attachment.cpp  attachment.h  linkpaginatedtimelinemodel.cpp  maintimelinemodel.cpp  maintimelinemodel.h  notification.cpp  notification.h  notificationmodel.cpp  notificationmodel.h  poll.cpp  poll.h  post.cpp  post.h  tag.cpp  tag.h  tagsmodel.cpp  tagsmodel.h  tagstimelinemodel.cpp  tagstimelinemodel.h  threadmodel.cpp  threadmodel.h  timelinemodel.cpp  timelinemodel.h  trendingnewsmodel.cpp  trendingnewsmodel.h
src/utils/: androidutils.cpp  androidutils.h  blurhash.cpp  blurhash.h  blurhash.hpp  blurhashimageprovider.cpp  blurhashimageprovider.h  clipboard.cpp  clipboard.h  colorschemer.cpp  colorschemer.h  customemoji.cpp  customemoji.h  ecdh.cpp  ecdh.h  emojihelper.cpp  emojihelper.h  emojimodel.cpp  emojimodel.h  emojitones.cpp  emojitones.h  filehelper.cpp  filehelper.h  filetransferjob.cpp  filetransferjob.h  initialsetupflow.cpp  initialsetupflow.h  limitermodel.cpp  limitermodel.h  messagefiltercontainer.cpp  messagefiltercontainer.h  mpvplayer.cpp  mpvplayer.h  navigation.cpp  navigation.h  poststatisticsdatabase.cpp  poststatisticsdatabase.h  qthelper.hpp  rowlimitmodel.cpp  rowlimitmodel.h  (+8 more)
(+289 files in other folders)
